syntax = "proto3";
package tendermint.types;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/types";

import "gogoproto/gogo.proto";
import "tendermint/types/header.proto";
import "tendermint/types/types.proto";
import "tendermint/types/validator.proto";
import "tendermint/version/types.proto";
import "google/protobuf/timestamp.proto";
import "tendermint/types/evidence.proto";

message Block {
  tendermint.types.Header                        header          = 1 [(gogoproto.nullable) = false];
  Data                          data            = 2 [(gogoproto.nullable) = false];
  CoreChainLock                 core_chain_lock = 100 [(gogoproto.nullable) = true];
  tendermint.types.EvidenceList evidence        = 3 [(gogoproto.nullable) = false];
  Commit                        last_commit     = 4;
}


message LightBlock {
  SignedHeader                  signed_header = 1;
  tendermint.types.ValidatorSet validator_set = 2;
}

message BlockMeta {
  BlockID block_id            = 1 [(gogoproto.customname) = "BlockID", (gogoproto.nullable) = false];
  int64   block_size          = 2;
  tendermint.types.Header  header              = 3 [(gogoproto.nullable) = false];
  int64   num_txs             = 4;
  bool    has_core_chain_lock = 100;
}
